tests/equality/equality.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:7

Cannot compare number literal `3` [1] to string literal `A` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:5:7
   5|   if (o1 == o2) {
            ^^

References:
   test.js:4:21
   4| function foo1 (o1 : T, o2 : U) {
                          ^ [1]
   test.js:4:29
   4| function foo1 (o1 : T, o2 : U) {
                                  ^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:5:7

Cannot compare number literal `3` [1] to string literal `B` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:5:7
   5|   if (o1 == o2) {
            ^^

References:
   test.js:4:21
   4| function foo1 (o1 : T, o2 : U) {
                          ^ [1]
   test.js:4:29
   4| function foo1 (o1 : T, o2 : U) {
                                  ^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:5:7

Cannot compare number literal `4` [1] to string literal `A` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:5:7
   5|   if (o1 == o2) {
            ^^

References:
   test.js:4:21
   4| function foo1 (o1 : T, o2 : U) {
                          ^ [1]
   test.js:4:29
   4| function foo1 (o1 : T, o2 : U) {
                                  ^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:5:7

Cannot compare number literal `4` [1] to string literal `B` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:5:7
   5|   if (o1 == o2) {
            ^^

References:
   test.js:4:21
   4| function foo1 (o1 : T, o2 : U) {
                          ^ [1]
   test.js:4:29
   4| function foo1 (o1 : T, o2 : U) {
                                  ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:7

Cannot compare number literal `1` [1] to string literal `B` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:14:7
   14|   if (o1 == o2) {
             ^^

References:
   test.js:13:21
   13| function foo2 (o1 : A, o2 : B) {
                           ^ [1]
   test.js:13:29
   13| function foo2 (o1 : A, o2 : B) {
                                   ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:7

Cannot compare number literal `1` [1] to string literal `C` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:14:7
   14|   if (o1 == o2) {
             ^^

References:
   test.js:13:21
   13| function foo2 (o1 : A, o2 : B) {
                           ^ [1]
   test.js:13:29
   13| function foo2 (o1 : A, o2 : B) {
                                   ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:7

Cannot compare number literal `2` [1] to string literal `B` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:14:7
   14|   if (o1 == o2) {
             ^^

References:
   test.js:13:21
   13| function foo2 (o1 : A, o2 : B) {
                           ^ [1]
   test.js:13:29
   13| function foo2 (o1 : A, o2 : B) {
                                   ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:7

Cannot compare number literal `2` [1] to string literal `C` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:14:7
   14|   if (o1 == o2) {
             ^^

References:
   test.js:13:21
   13| function foo2 (o1 : A, o2 : B) {
                           ^ [1]
   test.js:13:29
   13| function foo2 (o1 : A, o2 : B) {
                                   ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:7

Cannot compare string literal `A` [1] to number literal `3` [2] with a non-strict equality check. Make sure the
arguments are valid, or try using strict equality (`===` or `!==`) instead. [invalid-compare]

   test.js:14:7
   14|   if (o1 == o2) {
             ^^

References:
   test.js:13:21
   13| function foo2 (o1 : A, o2 : B) {
                           ^ [1]
   test.js:13:29
   13| function foo2 (o1 : A, o2 : B) {
                                   ^ [2]



Found 9 errors
